# VektorDB

./: README.md  ann.py  setup.cfg  vektordb.py
examples/: ann_simple.py  bedrock_embeddings.ipynb  bedrock_embeddings.py  naive_simple.py
vektordb/: __init__.py  ann.py  core.py  types.py  utils.py
