[metadata]
name = VektorDB
version = 0.1.0
author = João Galego
description = A minimal vector database for educational purposes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
	prettytable
python_requires = >=3.12

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3